fix(shared-space): Fix shared-space bugs and add tests (#20)
* fix(shared-space): Fix bugs in update function

* fix(shared-space): Fix update function additional bugs

* fix(shared-space): Fix userID is null bug

* fix(shared-space): Fix no return message for delete shared data

* fix(shared-space): Fix shared space tests

* test(shared-space): Add more tests

* test(shared-space): Add additional tests for shared-space